--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <div class="slide slide1"></div>
     <div class="slide slide2" id="slide"></div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
