--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Image Comparision Slider Scapp ESG</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="container">
-    <div class="slide slide1"></div>
-    <div class="slide slide2" id="slide"></div>
-  </div>
-  <script src="script.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Image Comparison</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="image-wrapper">
+        <img
+          src="https://github.com/andriusmv/imgcomparisionscapp/blob/main/Screenshot%20(2305).png?raw=true"
+          alt="Before"
+        />
+        <div class="slider">
+          <img
+            src="https://github.com/andriusmv/imgcomparisionscapp/blob/main/Screenshot%20(2306).png?raw=true"
+            alt="After"
+          />
+          <div class="handle"></div>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
